@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.894 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.895 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -173,3 +173,5 @@ Changes from NetBSD 4.0 to NetBSD 5.0:
 	mpt(4): Add support for newer SAS and similar devices. [tron 20070727]
 	ichsmb(4): Add support for Intel ICH SMBus controller.
 		[kiyohara 20070728]
+	shark: Add dhclient(8) to the install disk image to be able to
+		configure network interfaces through DHCP.  [jmmv 20070729]
